--- a/app-web/src/main/resources/Owasp.CsrfGuard.overlay.properties
+++ b/app-web/src/main/resources/Owasp.CsrfGuard.overlay.properties
@@ -7,6 +7,8 @@ org.owasp.csrfguard.unprotected.Default=%servletContext%/
 org.owasp.csrfguard.unprotected.JavaScriptServlet=%servletContext%/JavaScriptServlet
 org.owasp.csrfguard.unprotected.Error=%servletContext%/app/pages/error
 org.owasp.csrfguard.unprotected.Index=%servletContext%/app/pages/index
+org.owasp.csrfguard.unprotected.Bower=%servletContext%/app/bower_components/*
+org.owasp.csrfguard.unprotected.Bower=%servletContext%/broadcast/*
 
 #Actions de consulta para Aluno
 org.owasp.csrfguard.unprotected.AlunoId=^%servletContext%/app/student/\\d++$
